--- a/UmbValidationAttributes/UmbValidationAttributes.csproj
+++ b/UmbValidationAttributes/UmbValidationAttributes.csproj
@@ -42,4 +42,8 @@
         <None Include="README.md" Pack="true" PackagePath="\"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="obj\Debug\net9.0\" />
+    </ItemGroup>
+
 </Project>
