--- a/Umbraco.TestInstance/Umbraco.TestInstance.csproj
+++ b/Umbraco.TestInstance/Umbraco.TestInstance.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.jQuery.Unobtrusive.Ajax" Version="3.2.6" />
+        <PackageReference Include="Microsoft.jQuery.Unobtrusive.Validation" Version="4.0.0" />
         <PackageReference Include="Umbraco.Cms" Version="15.4.3"/>
     </ItemGroup>
 
